<resources>
    <string name="app_name">Ludendorff</string>
    <string name="activity_authentication">Authentication</string>
    <string name="activity_notifications">Notifications</string>
    <string name="activity_scan">Scan</string>
    <string name="activity_assets">Assets</string>
    <string name="activity_inventory">Inventory Reports</string>
    <string name="activity_issued">Issued Items Reports</string>
    <string name="activity_stock_card">Stock Cards</string>
    <string name="activity_users">Users</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_categories">Categories</string>
    <string name="activity_departments">Departments</string>
    <string name="activity_options">Options</string>
    <string name="activity_result">Result</string>
    <string name="activity_profile">Profile</string>
    <string name="navigation_notification">@string/activity_notifications</string>
    <string name="navigation_scan">@string/activity_scan</string>
    <string name="navigation_assets">@string/activity_assets</string>
    <string name="navigation_users">@string/activity_users</string>
    <string name="navigation_inventory">@string/activity_inventory</string>
    <string name="navigation_issued">@string/activity_issued</string>
    <string name="navigation_stock_card">@string/activity_stock_card</string>
    <string name="navigation_categories">@string/activity_categories</string>
    <string name="navigation_departments">@string/activity_departments</string>
    <string name="navigation_notifications">@string/activity_notifications</string>
    <string name="navigation_settings">@string/activity_settings</string>
    <string name="title_configure_entity">Configure Entity</string>
    <string name="title_asset_create">Create Asset</string>
    <string name="title_asset_update">Edit Asset</string>
    <string name="title_asset_select">Select Asset</string>
    <string name="title_department_create">Create Department</string>
    <string name="title_department_update">Edit Department</string>
    <string name="title_department_select">Select Department</string>
    <string name="title_category_create">Create Category</string>
    <string name="title_category_update">Edit Category</string>
    <string name="title_category_select">Select Category</string>
    <string name="title_subcategory_create">Create Subcategory</string>
    <string name="title_subcategory_update">Update Subcategory</string>
    <string name="title_user_create">Create User</string>
    <string name="title_user_update">Edit User</string>
    <string name="title_user_select">Select User</string>
    <string name="title_inventory_create">Create Report</string>
    <string name="title_inventory_update">Update Report</string>
    <string name="title_inventory_select">Select Report</string>
    <string name="title_issued_create">Create Report</string>
    <string name="title_issued_update">Update Report</string>
    <string name="title_stock_card_create">Create Stock Card</string>
    <string name="title_stock_card_update">Update Stock Card</string>
    <string name="title_request_create">Create Request</string>
    <string name="title_request_details">Request Details</string>
    <string name="title_scan_result">Scan Result</string>
    <string name="title_select_profile_picture">Select Profile Picture</string>
    <string name="title_view_qr_code">View QR Code</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_change_name">Change Name</string>
    <string name="title_image_select">Select Image</string>
    <string name="title_configure_inventory_item">Configure Inventory Item</string>
    <string name="title_configure_issued_item">Configure Issued Item</string>
    <string name="title_configure_stock_card_entry">Configure Stock Card Entry</string>
    <string name="title_account_setup">Finish Account Setup</string>
    <string name="title_third_party_notices">Third Party Notices</string>
    <string name="hint_email">Email</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_asset_description">Asset Description</string>
    <string name="hint_status">Status</string>
    <string name="hint_specifications">Specifications</string>
    <string name="hint_name">Name</string>
    <string name="hint_value">Value</string>
    <string name="hint_not_set">Not Set</string>
    <string name="hint_vacant">Vacant</string>
    <string name="hint_none">None</string>
    <string name="hint_user">User</string>
    <string name="hint_position">Position</string>
    <string name="hint_credentials">Credentials</string>
    <string name="hint_information">Information</string>
    <string name="hint_permissions">Permissions</string>
    <string name="hint_date_created">Date Created</string>
    <string name="hint_assets">Assets</string>
    <string name="hint_remarks">Remarks</string>
    <string name="hint_search">Enter a query</string>
    <string name="hint_stock_number">Stock Number</string>
    <string name="hint_description">Description</string>
    <string name="hint_subcategory">Subcategory</string>
    <string name="hint_category">Category</string>
    <string name="hint_unit_of_measure">Unit of Measure</string>
    <string name="hint_unit_value">Unit Value</string>
    <string name="hint_unit_cost">Unit Cost</string>
    <string name="hint_fund_cluster">Fund Cluster</string>
    <string name="hint_entity_name">Entity Name</string>
    <string name="hint_entity_position">Entity Position</string>
    <string name="hint_accountability_date">Accountability Date</string>
    <string name="hint_year_month">Year Month</string>
    <string name="hint_year">Year</string>
    <string name="hint_month">Month</string>
    <string name="hint_responsibility_center">Responsibility Center</string>
    <string name="hint_quantity_issued">Quantity Issued</string>
    <string name="hint_serial_number">Serial Number</string>
    <string name="hint_date">Date</string>
    <string name="hint_balance_per_card">Balance Per Card</string>
    <string name="hint_on_hand_count">On Hand Count</string>
    <string name="hint_amount_requested">Amount Requested</string>
    <string name="hint_requested_item_value">Requested Item Value</string>
    <string name="hint_amount_given">Amount Given</string>
    <string name="hint_value_given">Value Given</string>
    <string name="hint_amount_owned">Amount Owned</string>
    <string name="hint_location_given">Location Given</string>
    <string name="hint_unit_of_measurement">Unit of Measurement</string>
    <string name="hint_reference">Reference</string>
    <string name="hint_entries">Entries</string>
    <string name="hint_received_quantity">Received Quantity</string>
    <string name="hint_requested_quantity">Requested Quantity</string>
    <string name="hint_issue_quantity">Issue Quantity</string>
    <string name="hint_issue_office">Issue Office</string>
    <string name="hint_balance_quantity">Balance Quantity</string>
    <string name="hint_balance_total_price">Balance Total Price</string>
    <string name="hint_asset_item">Asset Item</string>
    <string name="hint_supplier">Supplier</string>
    <string name="hint_unit_price">Unit Price</string>
    <string name="hint_total_value">Total Value</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_subcategories">Subcategories</string>
    <string name="hint_subcategory_name">Subcategory Name</string>
    <string name="button_add">Add</string>
    <string name="button_authenticating">Authenticating</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_grant_permission">Grant Permission</string>
    <string name="button_save">Save</string>
    <string name="button_remove">Remove</string>
    <string name="button_reset">Reset</string>
    <string name="button_share">Share</string>
    <string name="button_search">Search</string>
    <string name="button_send">Send</string>
    <string name="button_disable">Disable</string>
    <string name="button_enable">Enable</string>
    <string name="button_endorse">Endorse</string>
    <string name="button_duplicate">Duplicate</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="button_select_image">Select Image</string>
    <string name="button_use_today">Use Today\'s Date</string>
    <string name="button_pick_date">Pick Date</string>
    <string name="button_end_assignment">End Assignment</string>
    <string name="button_reconnect">Reconnect</string>
    <string name="button_find_usages">Find Usages</string>
    <string name="button_set_source_quantity">Set Source Quantity</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_departments">Departments</string>
    <string name="menu_entities">Entities</string>
    <string name="menu_sent_requests">Sent Requests</string>
    <string name="menu_search">Search</string>
    <string name="menu_disable">@string/button_disable</string>
    <string name="menu_enable">@string/button_enable</string>
    <string name="menu_end_assignment">@string/button_end_assignment</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_view_qrcode">View QR Code</string>
    <string name="menu_copy">Duplicate</string>
    <string name="menu_update_avatar">Update Avatar</string>
    <string name="menu_remove_avatar">Remove Avatar</string>
    <string name="menu_change_name">Change Name</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_request_password_reset">Request Password Reset</string>
    <string name="authentication_title">Log in to Ludendorff</string>
    <string name="authentication_summary">Enter your email and password</string>
    <string name="authentication_confirm">Authentication is Required</string>
    <string name="authentication_confirm_summary">Provide your credentials to continue.</string>
    <string name="authentication_anonymous_user">Anonymous User</string>
    <string name="asset_status_option_operational">Operational</string>
    <string name="asset_status_option_idle">Idle</string>
    <string name="asset_status_option_under_maintenance">Under Maintenance</string>
    <string name="asset_status_option_retired">Retired</string>
    <string name="sort_direction_ascending">Ascending</string>
    <string name="sort_direction_descending">Descending</string>
    <string name="settings_group_interface">Interface</string>
    <string name="settings_group_lists">Lists</string>
    <string name="settings_group_about">About</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_data_list_overline">What data should appear in the top?</string>
    <string name="settings_data_list_header">What data should appear in the header?</string>
    <string name="settings_data_list_summary">What data should appear in the summary?</string>
    <string name="settings_data_list_asset">Asset Lists</string>
    <string name="settings_data_list_inventory">Inventory Report Lists</string>
    <string name="settings_data_list_issued">Issued Report Lists</string>
    <string name="settings_data_list_stock_card">Stock Card Lists</string>
    <string name="settings_data_list_user">User Lists</string>
    <string name="settings_build_version">Build Version</string>
    <string name="settings_third_party_notices">Third Party Notices</string>
</resources>