<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_type"
        android:title="@string/menu_categories"
        android:icon="@drawable/ic_outline_category_24"/>

    <item
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_hero_sort_ascending">
        <menu>
            <item
                android:title="@string/hint_asset_description"
                android:icon="@drawable/ic_round_edit_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_asset_description_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_ascending"/>
                    <item
                        android:id="@+id/action_sort_asset_description_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
            <item
                android:title="@string/hint_stock_number"
                android:icon="@drawable/ic_round_numbers_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_stock_number_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_ascending"/>
                    <item
                        android:id="@+id/action_sort_stock_number_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
            <item
                android:title="@string/hint_category"
                android:icon="@drawable/ic_outline_category_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_type_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_ascending"/>
                    <item
                        android:id="@+id/action_sort_type_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
        </menu>
    </item>

    <item
        android:title="@string/menu_filter"
        android:icon="@drawable/ic_round_filter_alt_24">
        <menu>
            <item
                android:id="@+id/action_filter_type"
                android:title="@string/hint_category"
                android:icon="@drawable/ic_outline_category_24"/>
        </menu>
    </item>

</menu>