<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/primaryGroup"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_user_home"
            android:title="@string/navigation_home"
            android:icon="@drawable/ic_hero_home"
            android:checked="true"/>

        <item
            android:id="@+id/navigation_scan"
            android:title="@string/navigation_scan"
            android:icon="@drawable/ic_hero_qrcode"/>

        <item
            android:id="@+id/navigation_assets"
            android:title="@string/navigation_assets"
            android:icon="@drawable/ic_hero_desktop_computer"/>

        <item
            android:id="@+id/navigation_users"
            android:title="@string/navigation_users"
            android:icon="@drawable/ic_hero_users"/>

        <item
            android:id="@+id/navigation_assignments"
            android:title="@string/navigation_assignments"
            android:icon="@drawable/ic_hero_identification"/>

    </group>

    <group
        android:id="@+id/secondaryGroup">

        <item
            android:id="@+id/navigation_notification"
            android:title="@string/navigation_notification"
            android:icon="@drawable/ic_hero_bell"/>

        <item
            android:id="@+id/navigation_core_settings"
            android:title="@string/navigation_settings"
            android:icon="@drawable/ic_hero_cog"/>

    </group>

</menu>