<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_hero_sort_ascending">
        <menu>
            <item
                android:title="@string/hint_year_month"
                android:icon="@drawable/ic_round_calendar_month_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_name_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_ascending"/>
                    <item
                        android:id="@+id/action_sort_name_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
            <item
                android:title="@string/hint_fund_cluster"
                android:icon="@drawable/ic_round_attach_money_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_status_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_ascending"/>
                    <item
                        android:id="@+id/action_sort_status_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
            <item
                android:title="@string/hint_entity_name"
                android:icon="@drawable/ic_round_perm_identity_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_entity_name_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_ascending"/>
                    <item
                        android:id="@+id/action_sort_entity_name_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
        </menu>
    </item>

</menu>