<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_enable"
        android:title="@string/menu_enable"
        android:icon="@drawable/ic_round_visibility_24"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_disable"
        android:title="@string/menu_disable"
        android:icon="@drawable/ic_round_visibility_off_24"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_remove"
        android:title="@string/menu_remove"
        android:icon="@drawable/ic_round_delete_outline_24"
        android:visible="false"
        app:showAsAction="never"/>

</menu>