<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_hero_sort_ascending">
        <menu>
            <item
                android:title="@string/hint_petitioner"
                android:icon="@drawable/ic_round_account_circle_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_petitioner_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_ascending"/>
                    <item
                        android:id="@+id/action_sort_petitioner_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
            <item
                android:title="@string/hint_asset_name"
                android:icon="@drawable/ic_round_edit_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_asset_name_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_ascending"/>
                    <item
                        android:id="@+id/action_sort_asset_name_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
            <item
                android:title="@string/hint_category"
                android:icon="@drawable/ic_round_local_offer_24">
                <menu>
                    <item
                        android:id="@+id/action_sort_category_ascending"
                        android:title="@string/sort_direction_ascending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                    <item
                        android:id="@+id/action_sort_category_descending"
                        android:title="@string/sort_direction_descending"
                        android:icon="@drawable/ic_hero_sort_descending"/>
                </menu>
            </item>
        </menu>
    </item>

    <item
        android:title="@string/menu_filter"
        android:icon="@drawable/ic_round_filter_alt_24">

    </item>
</menu>