<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/keeper_background_content">

    <include
        android:id="@+id/appBar"
        layout="@layout/layout_appbar_flat"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/assetNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_asset_name"
            style="@style/Widget.Keeper.TextInput.Layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/assetNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin_small"
            android:text="@string/hint_status"
            android:textAppearance="@style/TextAppearance.Keeper.Overline"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedChip="@id/idleChip">

            <com.google.android.material.chip.Chip
                android:id="@+id/operationalChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_status_option_operational"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/idleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_status_option_idle"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/underMaintenanceChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_status_option_under_maintenance"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/retiredChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_status_option_retired"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin_small"
            android:text="@string/hint_category"
            android:textAppearance="@style/TextAppearance.Keeper.Overline"/>



            <TextView
                android:id="@+id/categoryTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:focusable="true"
                android:clickable="true"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin_small"
            android:text="@string/hint_specifications"
            android:textAppearance="@style/TextAppearance.Keeper.Overline"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <include
            android:id="@+id/addAction"
            layout="@layout/layout_item_add"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/button_save"
        android:text="@string/button_save"
        app:icon="@drawable/ic_hero_check"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>